--- a/Worker.Blazor.Wasm/wwwroot/index.html
+++ b/Worker.Blazor.Wasm/wwwroot/index.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.masastack.com/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
+    <!--<link href="css/masa-blazor-pro.css" rel="stylesheet">-->
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script src="https://cdn.masastack.com/npm/echarts/5.1.1/echarts.min.js"></script>
 </head>
